@@ -1012,6 +1012,7 @@ static void DYNTRANS_INVALIDATE_TLB_ENTRY(struct cpu *cpu,
 		cpu->cd.DYNTRANS_ARCH.vaddr_to_tlbindex[index] = 0;
 	}
 #else
+	// 64-bit:
 	const uint32_t mask1 = (1 << DYNTRANS_L1N) - 1;
 	const uint32_t mask2 = (1 << DYNTRANS_L2N) - 1;
 	const uint32_t mask3 = (1 << DYNTRANS_L3N) - 1;
@@ -1203,8 +1204,29 @@ void DYNTRANS_INVALIDATE_TC(struct cpu *cpu, uint64_t addr, int flags)
 
 	/*  Quick case for _one_ virtual addresses: see note above.  */
 	if (flags & INVALIDATE_VADDR) {
+#ifdef MODE32
+		// All implemented 32-bit CPUs have address spaces where
+		// all 32 bits are used in virtual addresses. So we do not
+		// need to "scan" for hits.
 		/*  fatal("vaddr 0x%08x\n", (int)addr_page);  */
 		DYNTRANS_INVALIDATE_TLB_ENTRY(cpu, addr_page, flags);
+#else
+		// Unfortunately, for 64-bit address spaces, there can be
+		// multiple entries, and they must be invalidated based
+		// on the bits that matter. For example, on MIPS, using
+		// vaddr 0x00A0000012345678 and 0x00B000001234567c
+		// actually point to the same physical page, and if then
+		// the virtual address 0x0000000012345000 is to be invalidated,
+		// then both of those should be invalidated!
+		// printf("::::    A\n");
+		for (r=0; r<DYNTRANS_MAX_VPH_TLB_ENTRIES; r++)
+			if (cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].valid &&
+			    (cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].vaddr_page
+			    & cpu->vaddr_mask) == (addr_page & cpu->vaddr_mask)) {
+				DYNTRANS_INVALIDATE_TLB_ENTRY(cpu, cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].vaddr_page, flags);
+				// printf("::::    B 0x%016llx\n", (long long)cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].vaddr_page);
+			}
+#endif
 		return;
 	}
 
@@ -1219,7 +1241,9 @@ void DYNTRANS_INVALIDATE_TC(struct cpu *cpu, uint64_t addr, int flags)
 				DYNTRANS_INVALIDATE_TLB_ENTRY(cpu, cpu->cd.
 				    DYNTRANS_ARCH.vph_tlb_entry[r].vaddr_page,
 				    0);
-				cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].valid=0;
+				// Not needed: DYNTRANS_INVALIDATE_TLB_ENTRY should
+				// set valid to 0 anyway.
+				// cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].valid=0;
 			}
 		}
 		return;
@@ -1232,7 +1256,9 @@ void DYNTRANS_INVALIDATE_TC(struct cpu *cpu, uint64_t addr, int flags)
 				DYNTRANS_INVALIDATE_TLB_ENTRY(cpu, cpu->cd.
 				    DYNTRANS_ARCH.vph_tlb_entry[r].vaddr_page,
 				    0);
-				cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].valid=0;
+				// Not needed: DYNTRANS_INVALIDATE_TLB_ENTRY should
+				// set valid to 0 anyway.
+				// cpu->cd.DYNTRANS_ARCH.vph_tlb_entry[r].valid=0;
 			}
 		}
 		return;
